--- a/root/index.html
+++ b/root/index.html
@@ -41,7 +41,7 @@
           >
             <div class="mdl-card__supporting-text mdl-color-text--grey-600">
               <!-- div to display the generated registration token -->
-              <div id="token_div" style="display: none">
+              <div id="token_div">
                 <h4>Registration Token</h4>
                 <p id="token" style="word-break: break-all"></p>
                 <button
@@ -54,7 +54,7 @@
               <!-- div to display the UI to allow the request for permission to
                notify the user. This is shown if the app has not yet been
                granted permission to notify. -->
-              <div id="permission_div" style="display: none">
+              <div id="permission_div">
                 <h4>Needs Permission</h4>
                 <p id="token"></p>
                 <button
@@ -79,6 +79,52 @@
     <script src="/__/firebase/9.6.7/firebase-app-compat.js"></script>
     <script src="/__/firebase/9.6.7/firebase-messaging-compat.js"></script>
     <script src="/__/firebase/init.js"></script>
+    <!-- <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.9/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.9/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyBL5w0-iflPxpkcfCeZjueERK3-LuCsVRo",
+        authDomain: "test-web-push-306ec.firebaseapp.com",
+        projectId: "test-web-push-306ec",
+        storageBucket: "test-web-push-306ec.appspot.com",
+        messagingSenderId: "1018457978399",
+        appId: "1:1018457978399:web:38bf71a8a7f5f01ea3072a",
+        measurementId: "G-QW0KW55KWM",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script> -->
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.9/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.9/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyAUG9tmNuWCmQ7t9SalXvQVyLxtKXNiljw",
+        authDomain: "web-push-widget.firebaseapp.com",
+        projectId: "web-push-widget",
+        storageBucket: "web-push-widget.appspot.com",
+        messagingSenderId: "402391781756",
+        appId: "1:402391781756:web:6ed2b8306ead72f2acd4f9",
+        measurementId: "G-D30XQYD92F"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
 
     <script>
       // Retrieve Firebase Messaging object.
@@ -106,12 +152,13 @@
         messaging
           .getToken({
             vapidKey:
-              "BAjUZvYdDmcYszKcuFEoAKrgwVrc8xkaOqTPNC2n7bRl883iTRrjKuaQPc9yPhTEahbMSaJOWkgHYVEdCGUq2g8",
+              "BNDR5UyU4EPY52TkGtTU0gVSSpHnPMv819cKIOrLw5_WwUNfhH1c7zo_TID_WZawFxytDNQNKtXUvEl91ZYiK-c",
           })
           .then((currentToken) => {
             if (currentToken) {
               sendTokenToServer(currentToken);
               updateUIForPushEnabled(currentToken);
+              console.log("TOKEN=", currentToken);
               fetch(
                 "https://pushservertest.edna.ru/push-test/service/device/registerPushDevice",
                 {
@@ -184,6 +231,34 @@
             setTokenSentToServer(false);
             updateUIForPushEnabled(currentToken);
           });
+
+        // messaging
+        //   .getToken({
+        //     vapidKey:
+        //       "BAjUZvYdDmcYszKcuFEoAKrgwVrc8xkaOqTPNC2n7bRl883iTRrjKuaQPc9yPhTEahbMSaJOWkgHYVEdCGUq2g8",
+        //   })
+        //   .then((currentToken) => {
+        //     if (currentToken) {
+        //       sendTokenToServer(currentToken);
+        //       updateUIForPushEnabled(currentToken);
+        //       console.log("test", currentToken);
+        //     } else {
+        //       // Show permission request.
+        //       console.log(
+        //         "No registration token available. Request permission to generate one."
+        //       );
+        //       // Show permission UI.
+        //       updateUIForPushPermissionRequired();
+        //       setTokenSentToServer(false);
+        //     }
+        //   })
+        //   .catch((err) => {
+        //     console.log("An error occurred while retrieving token. ", err);
+        //  // requestPermission();
+        //     showToken("Error retrieving registration token. ", err);
+        //     setTokenSentToServer(false);
+        //     // updateUIForPushEnabled(currentToken);
+        //   });
       }
 
       function showToken(currentToken) {
@@ -246,7 +321,7 @@
         messaging
           .getToken({
             vapidKey:
-              "BAjUZvYdDmcYszKcuFEoAKrgwVrc8xkaOqTPNC2n7bRl883iTRrjKuaQPc9yPhTEahbMSaJOWkgHYVEdCGUq2g8",
+              "BNDR5UyU4EPY52TkGtTU0gVSSpHnPMv819cKIOrLw5_WwUNfhH1c7zo_TID_WZawFxytDNQNKtXUvEl91ZYiK-c",
           })
           .then((currentToken) => {
             messaging
